@@ -18,7 +18,7 @@
 #
 """
 
-$Id: ATEvent.py,v 1.12 2004/05/15 01:53:07 tiran Exp $
+$Id: ATEvent.py,v 1.13 2004/06/09 13:59:19 tiran Exp $
 """ 
 __author__  = ''
 __docformat__ = 'restructuredtext'
@@ -103,5 +103,53 @@ class ATEvent(ATCTContent, CalendarSupportMixin):
         metatool = getToolByName(self, "portal_metadata")
         events = metatool.listAllowedSubjects(content_type = "Event")
         return events
+
+    def edit(self, title=None, description=None, eventType=None,
+             effectiveDay=None, effectiveMo=None, effectiveYear=None,
+             expirationDay=None, expirationMo=None, expirationYear=None,
+             start_time=None, startAMPM=None,
+             stop_time=None, stopAMPM=None,
+             location=None,
+             contact_name=None, contact_email=None, contact_phone=None,
+             event_url=None):
+##        if title is not None:
+##            self.setTitle(title)
+##        if description is not None:
+##            self.setDescription(description)
+##        if eventType is not None:
+##            self.setEventType(eventType)
+##        if location is not None:
+##            self.setLocation(location)
+##        if contact_name is not None:
+##            self.setContactName = contact_name
+##        if contact_email is not None:
+##            self.setContactEmail = contact_email
+##        if contact_phone is not None:
+##            self.setContactPhone = contact_phone
+##        if event_url is not None:
+##            self.setEventUrl = event_url
+
+        if effectiveDay and effectiveMo and effectiveYear and start_time:
+            sdate = '%s-%s-%s %s %s' % (effectiveDay, effectiveMo, effectiveYear,
+                                         start_time, startAMPM)
+        else:
+            sdate = None
+
+        if expirationDay and expirationMo and expirationYear and stop_time:
+            edate = '%s-%s-%s %s %s' % (expirationDay, expirationMo, expirationYear,
+                                         stop_time, stopAMPM)
+        else:
+            edate = None
+
+        if sdate and edate:
+            if edate < sdate:
+                edate = sdate
+            self.setStartDate(sdate)
+            self.setEndDate(edate)
+        
+##        self.update(title=title, description=description, eventType=eventType,
+##                    location=location, contactName=contact_name,
+##                    contactEmail=contact_email, contactPhone=contact_phone,
+##                    eventUrl=event_url)
 
 registerType(ATEvent, PROJECTNAME)
